max-widths on ID td's and th's content tags are having no effect on width of ID td's and th's themselves resulting in 2nd column (Excerpt) being way over to the right of the ID column. Drop the max-width and replace with a fixed width on the ID td and th which looks less ugly now that ID column contents are center aligned rather than right aligned.

--- a/django/econsensus/publicweb/static/css/styles.css
+++ b/django/econsensus/publicweb/static/css/styles.css
@@ -364,11 +364,8 @@ input {
     font-weight: bold;
 }
 
-.id a {
-    max-width: 120px;
-}
-.id a span {
-    max-width: 85px;
+.id {
+    width: 140px;
 }
 
 p.no_items {
